# Hello-OpenGL

./: .clang-format  .gitignore  CMakeLists.txt  Readme.md
include/glad/: glad.h
src/: glad.c  hello-triangle-elements.cpp  hello-triangle.cpp  hello-window.cpp
src/3d_viewer/: 3d_viewer.cpp  camera.h  config.h  glm_util.h  model.cpp  model.h  navigate.h  rendering_scheme.cpp  rendering_scheme.h  shader.cpp  shader.h  shadow_rendering.fs  shadow_rendering.vs  uniform_color.fs
src/3d_viewer/shaders/: point_color.vs
src/camera_system/: camera.h  camera_system.cpp  camera_system.fs  camera_system.vs  shader.h
